--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
+    "bootstrap-icons-vue": "^0.6.0",
     "core-js": "^3.6.5",
+    "uniqid": "^5.3.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@types/uniqid": "^5.3.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
